feat: specs evolution
